--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,4 +1,5 @@
 /*!
+ * Color Schema (https://color.adobe.com/Tech-Office-color-theme-23615/edit/?copy=true&base=0&rule=Custom&selected=2&name=Copy%20of%20Tech%20Office&mode=rgb&rgbvalues=0.34902,0.321569,0.254902,0.721569,0.682353,0.611765,1,1,1,0.67451,0.811765,0.8,0.541176,0.0352941,0.0901961&swatchOrder=0,1,2,3,4)
  * Start Bootstrap - Freelancer v3.3.7+1 (http://startbootstrap.com/template-overviews/freelancer)
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
@@ -18,7 +19,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #18BC9C;
+  color: #B8AE9C;
   outline: none;
 }
 h1,
@@ -51,17 +52,17 @@ hr.star-primary:after {
   padding: 0 0.25em;
 }
 hr.star-light {
-  border-color: white;
+  border-color: #8A0917;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
-  color: white;
+  background-color: #B8AE9C;
+  color: #8A0917;
 }
 hr.star-primary {
   border-color: #2C3E50;
 }
 hr.star-primary:after {
-  background-color: white;
+  background-color: #ACCFCC;
   color: #2C3E50;
 }
 .img-centered {
@@ -69,8 +70,8 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC9C;
-  color: white;
+  background: #B8AE9C;
+  color: #FFFFFF;
 }
 header .container {
   padding-top: 100px;
@@ -114,49 +115,49 @@ header .intro-text .skills {
   outline: none;
 }
 .navbar-custom .navbar-brand {
-  color: white;
+  color: #ACCFCC;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: white;
+  color: #ACCFCC;
 }
 .navbar-custom .navbar-nav {
   letter-spacing: 1px;
 }
 .navbar-custom .navbar-nav li a {
-  color: white;
+  color: #ACCFCC;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  color: #B8AE9C;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
-  color: white;
+  color: #FFFFFF;
 }
 .navbar-custom .navbar-nav li.active a {
-  color: white;
-  background: #18BC9C;
+  color: #8A0917;
+  background: #FFFFFF;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
-  color: white;
-  background: #18BC9C;
+  color: #8A0917;
+  background: #FFFFFF;
 }
 .navbar-custom .navbar-toggle {
-  color: white;
+  color: #ACCFCC;
   text-transform: uppercase;
   font-size: 10px;
-  border-color: white;
+  border-color: #ACCFCC;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
-  color: white;
-  border-color: #18BC9C;
+  background-color: #B8AE9C;
+  color: #ACCFCC;
+  border-color: #B8AE9C;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -186,8 +187,8 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
-  color: white;
+  background: #B8AE9C;
+  color: #FFFFFF;
 }
 @media (max-width: 767px) {
   section {
@@ -228,7 +229,7 @@ section.success {
   text-align: center;
   top: 50%;
   margin-top: -12px;
-  color: white;
+  color: #ACCFCC;
 }
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
   margin-top: -12px;
@@ -289,13 +290,13 @@ section.success {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #B8AE9C;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
 }
 footer {
-  color: white;
+  color: #ACCFCC;
 }
 footer h3 {
   margin-bottom: 30px;
@@ -312,9 +313,9 @@ footer .footer-below {
   background-color: #233140;
 }
 .btn-outline {
-  color: white;
+  color: #ACCFCC;
   font-size: 20px;
-  border: solid 2px white;
+  border: solid 2px #ACCFCC;
   background: transparent;
   transition: all 0.3s ease-in-out;
   margin-top: 15px;
@@ -323,12 +324,12 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
-  background: white;
-  border: solid 2px white;
+  color: #B8AE9C;
+  background: #ACCFCC;
+  border: solid 2px #ACCFCC;
 }
 .btn-primary {
-  color: white;
+  color: #ACCFCC;
   background-color: #2C3E50;
   border-color: #2C3E50;
   font-weight: 700;
@@ -338,7 +339,7 @@ footer .footer-below {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: white;
+  color: #ACCFCC;
   background-color: #1a242f;
   border-color: #161f29;
 }
@@ -367,12 +368,12 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-primary .badge {
   color: #2C3E50;
-  background-color: white;
+  background-color: #ACCFCC;
 }
 .btn-success {
-  color: white;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  color: #ACCFCC;
+  background-color: #B8AE9C;
+  border-color: #B8AE9C;
   font-weight: 700;
 }
 .btn-success:hover,
@@ -380,7 +381,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-success:active,
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
-  color: white;
+  color: #ACCFCC;
   background-color: #128f76;
   border-color: #11866f;
 }
@@ -404,18 +405,18 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #B8AE9C;
+  border-color: #B8AE9C;
 }
 .btn-success .badge {
-  color: #18BC9C;
-  background-color: white;
+  color: #B8AE9C;
+  background-color: #ACCFCC;
 }
 .btn-social {
   display: inline-block;
   height: 50px;
   width: 50px;
-  border: 2px solid white;
+  border: 2px solid #ACCFCC;
   border-radius: 100%;
   text-align: center;
   font-size: 20px;
