fixed resume link

--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -80,7 +80,7 @@ a:hover {
 
 .flexContainer {
     display: flex;
-    padding: 64px 64px 0;
+    padding: 64px;
     justify-content: flex-start;
     align-items: stretch;
     flex: 1;
