--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -8,7 +8,7 @@
 
 
 .flexColumn.about {
-    margin: 0 32px 32px;
+    margin: 32px;
     flex-grow: 1;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: #ececeb;
