--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -25,6 +25,10 @@
     color: var(--grey);
 }
 
+.dropdown > * {
+    display: none;
+}
+
 html {
     background: var(--white);    
     height: 100%;    
@@ -94,27 +98,83 @@ a:hover {
     .divider {
         display: none;
     }
+
+    .dropbtn {
+        display: block;
+        background-color: #6aa84f;
+        color: white;
+        padding: 16px;
+        font-size: 1rem;
+        border: none;
+        cursor: pointer;
+        min-width: 100%;
+    }
+    
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        padding: 0 16px;
+    }
+    
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        display: none;
+        /* position: absolute; */
+        background-color: #f9f9f9;
+        min-width: 100%;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: #f1f1f1}
+    
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {
+    display: block;
+    }
+    
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+    }
+        
     .flexColumn.about {
         margin: 16px;
     }
     .flexContainer {
         display: flex;
-        padding: 32px;
+        padding: 32px 8px;
         justify-content: flex-start;
         align-items: stretch;
         flex: 1;
         flex-direction: column;
     }
-    .links > ul {
+    .links {
+        display: none;
+    }
+    /* .links > ul {
         display: flex;
         justify-content: space-between;
         padding: 8px;
+    } */
+
+    .list {
+        padding: 24px 0;
     }
+    
     .pageTitle {
         display: flex;
         justify-content: center;
         padding: 0 20%;
-        margin-bottom: -16px;
+        margin-bottom: 16px;
     }
     .spacer {
         width: 8px;
